--- a/basic_types/Makefile
+++ b/basic_types/Makefile
@@ -1,50 +1,80 @@
-#!/bin/bash
-
 #
 # Use this makefile, we have to compile the nginx before starting compile this demo.
 # We just use nginx to write demo programs.
 #
 
-NGX_ROOT= ../../nginx-1.2.4
-CC= gcc
+TARGETS := basic_types_int \
+		   basic_types_str \
+		   basic_types_pool \
+		   basic_types_array \
+		   basic_types_queue \
+           basic_types_hash
 
-CFLAGS=-g3 -O0 -W -Wall -Werror -Wpointer-arith -Wno-unused-parameter -Wunused-function -Wunused-variable -Wunused-value 
+NGX_ROOT := ../../nginx-1.2.4
 
-INCLUDEPATH= -I. \
-		     -I$(NGX_ROOT)/src/core \
-		     -I$(NGX_ROOT)/src/event \
-		     -I$(NGX_ROOT)/src/event/modules \
-		     -I$(NGX_ROOT)/src/os/unix \
-		     -I$(NGX_ROOT)/objs \
-		     -I$(NGX_ROOT)/src/http \
-		     -I$(NGX_ROOT)/src/http/modules
-        
-OBJPATH= $(NGX_ROOT)/objs/*.o \
-         $(NGX_ROOT)/objs/src/os/unix/*.o \
-         $(NGX_ROOT)/objs/src/core/*.o \
-         $(NGX_ROOT)/objs/src/event/*.o \
-         $(NGX_ROOT)/objs/src/event/modules/*.o \
-         $(NGX_ROOT)/objs/src/http/*.o \
-         $(NGX_ROOT)/objs/src/http/modules/*.o 
-
-
-LDFLAGS= 
-LIBS= -lstdc++ -lpthread  -lcrypt -lpcre -lcrypto -lz -lssl
-
-SOURCE=$(wildcard *.c)
-DIRECTORIES=$(notdir $(SOURCE))
-OBJECTS=$(patsubst %.c,%.o,$(DIRECTORIES) )
-TARGETS=$(patsubst %.c,%,$(DIRECTORIES) )
+CC := gcc
+CFLAGS := -pipe  -O0 -W -Wall -Wpointer-arith -Wno-unused-parameter -Werror -g
+INCS := -I. \
+		-I$(NGX_ROOT)/src/core \
+		-I$(NGX_ROOT)/src/event \
+		-I$(NGX_ROOT)/src/event/modules \
+		-I$(NGX_ROOT)/src/os/unix \
+		-I$(NGX_ROOT)/objs \
+		-I$(NGX_ROOT)/src/http \
+		-I$(NGX_ROOT)/src/http/modules
+LDFLAGS :=
+LIBS := -lcrypt -lpcre -lcrypto -lz
 
 all: $(TARGETS)
 
-$(OBJECTS):%.o:%.c
-	$(CC) -c $(CFLAGS) $(INCLUDEPATH) $< -o $@
-
-$(TARGETS):$(OBJECTS)
-	$(CC) $(OBJPATH) $(LDFLAGS) $(LIBS) -o $@ 
-
-.PHONEY:clean
+valgrind: $(TARGETS)
+	for prog in $(TARGETS); do \
+		valgrind --tool=memcheck --leak-check=full ./$$prog; \
+	done
 
 clean:
-	rm -f $(TARGETS) $(OBJECTS)
+	rm -f $(TARGETS) *.o
+
+.PHONY: all clean valgrind
+
+basic_types_int: basic_types_int.c
+	$(CC) $(CFLAGS) $(INCS) $^ -o $@ $(LDFLAGS) $(LIBS)
+
+basic_types_str: basic_types_str.c
+	$(CC) $(CFLAGS) $(INCS) $^ \
+		$(NGX_ROOT)/objs/src/core/ngx_palloc.o \
+		$(NGX_ROOT)/objs/src/core/ngx_string.o \
+		$(NGX_ROOT)/objs/src/os/unix/ngx_alloc.o \
+		-o $@ $(LDFLAGS) $(LIBS)
+
+basic_types_pool: basic_types_pool.c
+	$(CC) $(CFLAGS) $(INCS) $^ \
+		$(NGX_ROOT)/objs/src/core/ngx_palloc.o \
+		$(NGX_ROOT)/objs/src/core/ngx_string.o \
+		$(NGX_ROOT)/objs/src/os/unix/ngx_alloc.o \
+		-o $@ $(LDFLAGS) $(LIBS)
+
+basic_types_array: basic_types_array.c
+	$(CC) $(CFLAGS) $(INCS) $^ \
+		$(NGX_ROOT)/objs/src/core/ngx_palloc.o \
+		$(NGX_ROOT)/objs/src/core/ngx_string.o \
+		$(NGX_ROOT)/objs/src/core/ngx_array.o \
+		$(NGX_ROOT)/objs/src/os/unix/ngx_alloc.o \
+		-o $@ $(LDFLAGS) $(LIBS)
+
+basic_types_queue: basic_types_queue.c
+	$(CC) $(CFLAGS) $(INCS) $^ \
+		$(NGX_ROOT)/objs/src/core/ngx_palloc.o \
+		$(NGX_ROOT)/objs/src/core/ngx_string.o \
+		$(NGX_ROOT)/objs/src/core/ngx_queue.o \
+		$(NGX_ROOT)/objs/src/os/unix/ngx_alloc.o \
+		-o $@ $(LDFLAGS) $(LIBS)
+
+basic_types_hash: basic_types_hash.c
+	$(CC) $(CFLAGS) $(INCS) $^ \
+		$(NGX_ROOT)/objs/src/core/ngx_palloc.o \
+		$(NGX_ROOT)/objs/src/core/ngx_string.o \
+		$(NGX_ROOT)/objs/src/core/ngx_hash.o \
+		$(NGX_ROOT)/objs/src/core/ngx_array.o \
+		$(NGX_ROOT)/objs/src/os/unix/ngx_alloc.o \
+		-o $@ $(LDFLAGS) $(LIBS)
